alpm-types/src/snapshots/path::invalid_soname_lookup_directory_parser@case_2.snap
---
source: alpm-types/src/path.rs
---
error: invalid directory
 | 
 | lib:
 | ~~~~^ expected directory for a shared object lookup path
 | 
 = while parsing:
   soname lookup directory: (lib:)
   → invalid directory
   → expected directory for a shared object lookup path
